--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 }
 
 var startWatch = function() {
+   $("#my_audio").get(0).play();
     setInterval(function() { checkCenter(); } ,5000);
 }
 var startWatchByPin = function() {
@@ -289,6 +290,6 @@ $(document).ready(function(){
         </tbody>
     </table>
 </div>
-
+<audio id="my_audio" src="https://github.com/creditfinch/cowin/blob/main/telephone.mp3" loop="loop"></audio>
 </body>
 </html>
