--- a/index.html
+++ b/index.html
@@ -187,13 +187,17 @@
 }
 
 var startWatch = function() {
-   $("#my_audio").get(0).play();
+   
+    playSound();
     setInterval(function() { checkCenter(); } ,5000);
 }
 var startWatchByPin = function() {
     setInterval(function() { checkCenterByPin() } ,5000);
 }
-
+var playSound() {
+   var x = document.getElementById("myAudio");
+  x.play();
+}
 $(document).ready(function(){
 
     $.ajax({
@@ -290,6 +294,8 @@ $(document).ready(function(){
         </tbody>
     </table>
 </div>
-<audio id="my_audio" src="https://github.com/creditfinch/cowin/blob/main/telephone.mp3" loop="loop"></audio>
+  <audio id="myAudio">
+    <source src="https://github.com/creditfinch/cowin/blob/main/telephone.mp3" type="audio/mpeg">
+  </audio>
 </body>
 </html>
