--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ $(document).ready(function(){
     </table>
 </div>
   <audio id="myAudio">
-    <source src="https://github.com/creditfinch/cowin/blob/main/telephone.mp3" type="audio/mpeg">
+    <source src="/telephone.mp3" type="audio/mpeg">
   </audio>
 </body>
 </html>
