--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>    
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -297,7 +298,7 @@ $(document).ready(function(){
     </table>
 </div>
   <audio id="myAudio">
-    <source src="/telephone.mp3" type="audio/mpeg">
+    <source src="https://github.com/creditfinch/cowin/edit/main/telephone.mp3" type="audio/mpeg">
   </audio>
 </body>
 </html>
