--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ $(document).ready(function(){
     </table>
 </div>
   <audio id="myAudio">
-    <source src="https://github.com/creditfinch/cowin/edit/main/telephone.mp3" type="audio/mpeg">
+    <source src="https://www.w3schools.com/jsref/horse.mp3" type="audio/mpeg">
   </audio>
 </body>
 </html>
